v2.1/reference/calicoctl/resources/remoteclusterconfiguration.md
---
title: Remote Cluster Configuration Resource (RemoteClusterConfiguration)
redirect_from: latest/reference/calicoctl/resources/remoteclusterconfiguration
canonical_url: https://docs.tigera.io/v2.1/reference/calicoctl/resources/remoteclusterconfiguration
---

A remote cluster configuration resource (RemoteClusterConfiguration) represents a cluster in a federation of clusters.
Each remote cluster needs a configuration to be specified to allow the local cluster to access resources on the remote
cluster. The connection is one-way, the information flows only one way from the remote to the local cluster. To share
information from the local cluster to the remote one a remote cluster configuration resource must be created on the
remote cluster.

A remote cluster configuration causes Typha and calicoq to retrieve the following resources from a remote cluster
* [Workload endpoints](workloadendpoint)
* [Host endpoints](hostendpoint)
* [Profiles](profile) Rules are not retrieved from remote profiles, only the `LabelsToApply` field is used.

When using the kubernetes datastore with RBAC enabled on the remote cluster, the RBAC rules must be configured to allow access to these resources.

For more details on the federation feature see [here](/{{page.version}}/usage/federation)

The meaning of the fields matches the configuration used for configuring calicoctl, see the [etcd](../../../usage/calicoctl/configure/etcd) and [kubernetes](../../../usage/calicoctl/configure/kdd) instructions for more details.

For `calicoctl` commands that specify a resource type on the CLI, the following aliases are supported
(all case insensitive): `remoteclusterconfiguration`, `remoteclusterconfigurations`, `remoteclusterconfig`,
`remoteclusterconfigs`, `rcc`.

### Sample YAML

For a remote KDD cluster
```yaml
apiVersion: projectcalico.org/v3
kind: RemoteClusterConfiguration
metadata:
  name: cluster1
spec:
  datastoreType: kubernetes
  kubeconfig: /etc/calico-federation/kubeconfig-cluster1
```

For a remote etcdv3 cluster
```yaml
apiVersion: projectcalico.org/v3
kind: RemoteClusterConfiguration
metadata:
  name: cluster1
spec:
  datastoreType: etcdv3
  etcdEndpoints: "https://10.0.0.1:2379,https://10.0.0.2:2379"
```

### RemoteClusterConfiguration Definition

#### Metadata

| Field       | Description                                | Accepted Values   | Schema  |
|-------------|--------------------------------------------|-------------------|---------|
| name        | The name of this remote cluster configuration.              | Lower-case alphanumeric with optional `-`  | string  |

#### Spec

| Field          | Description                                  | Accepted Values                                         | Schema | Default    |
|----------------|----------------------------------------------|---------------------------------------------------------|--------|------------|
| datastoreType  | The datastore type of the remote cluster.    | `etcdv3` `kubernetes` | string   | none           |
| etcdEndpoints  | A comma separated list of etcd endpoints.    |  | string   | none           |
| etcdUsername   | Username for RBAC.                           |  | string   | none           |
| etcdPassword   | Password for the given username.             |  | string   | none           |
| etcdKeyFile    | Path to the etcd key file.                   |  | string   | none           |
| etcdCertFile   | Path to the etcd certificate file.           |  | string   | none           |
| etcdCACertFile | Path to the etcd CA certificate file.        |  | string   | none           |
| kubeconfig     | Location of the `kubeconfig` file.           |  | string   | none           |
| k8sAPIEndpoint | Location of the kubernetes API server.       |  | string   | none           |
| k8sKeyFile     | Location of a client key for accessing the Kubernetes API.         |  | string   | none           |
| k8sCertFile    | Location of a client certificate for accessing the Kubernetes API. |  | string   | none           |
| k8sCAFile      | Location of a CA certificate.                                      |  | string   | none           |
| k8sAPIToken    | Token to be used for accessing the Kubernetes API.                 |  | string   | none           |

All of the fields that start with `etcd` are only valid when the DatastoreType is etcdv3 and the fields that start with `k8s` or `kube` are only valid when the datastore type is kubernetes.
The `kubeconfig` field and the fields that end with `File` must be accessible to Typha and Calicoq.

When the DatastoreType is `kubernetes`, the `kubeconfig` file is optional but since it can contain all of the authentication information needed to access the Kubernetes API server it is generally easier to use than setting all the individual `k8s` fields. The other kubernetes fields can be used by themselves though or to override specific kubeconfig values.

### Supported operations

| Datastore type        | Create/Delete | Update | Get/List | Notes
|-----------------------|---------------|--------|----------|------
| etcdv3                | Yes           | Yes    | Yes      |
| Kubernetes API server | Yes           | Yes    | Yes      |